Fixed wrapping

--- a/src/app.scss
+++ b/src/app.scss
@@ -26,6 +26,7 @@ html {
   image-rendering: pixelated;
   width: 500px;
   height: 500px;
+  border: 1px solid black;
 }
 
 .stats {
